# FastCUA

./: .gitignore  OPENCODE-DEBUG.md  README.md  README_zh.md  app.js  card.xaml  clarity-8c8d1bf.css  config.json  daemon.mjs  index.html  install.ps1  mindmap-2622617.css  mindmap-fb857bd.css  opencode-complex-task.md  overlay.ps1  package.json  runtime-manifest.json  server.mjs  style-c86d40a.css  style.css  uninstall.ps1  web.html
assets/: app.js  index.css  styles.css
docs/: OPENCODE.md  RELEASING.md  RELEASING_zh.md  SELF_HOSTING.md  SELF_HOSTING_zh.md  STUCK.md  STUCK_zh.md  demonstration-recorder-feasibility.md  issue-3-comment-draft.md  skill-recorder-design.md
lib/: runtime.mjs  update-check.mjs
native-host/: Cargo.toml  build.ps1
native-host/src/: desktop.rs  main.rs  overlay.rs  uia.rs  win32.rs
re/: ANALYSIS.md  PATCH_MANIFEST.json
scripts/: build-release.ps1  manage.ps1
tests/: Fixture.cs  approval-lifecycle.mjs  build-fixture.ps1  control-plane-integration.mjs  fallback-regression.mjs  installer-contract.mjs  office-demo-e2e.mjs  opencode-complex-task.md  opencode-m365-complex.md  paint-drawing.mjs  protocol-regression.mjs  real-machine-validation.mjs  run-control-plane.ps1  runtime-identity-integration.mjs  runtime-release-contract.mjs  server-lifecycle.mjs  (+2 more)
tools/record-feasibility/: Cargo.toml  experiment.mjs
tools/record-feasibility/src/: main.rs
tools/skill-recorder/: Cargo.toml  compile.mjs  dryrun.mjs  frame-extract.mjs  lint-skill.mjs  promote.mjs  synthesize.mjs  writer-config.mjs
tools/skill-recorder/src/: main.rs
(+16 files in other folders)
