[package]
name = "cua-native-host"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Open-source Windows computer-use native host"

[[bin]]
name = "cua-native-host"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
jpeg-encoder = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
